--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-
-<p>Nesto sam promenio2</p>
+<div class="dropdown">
+  <button class="dropbtn">Modeli automobila</button>
+  <div class="dropdown-content">
+    <%= render 'modeldd', obj: @models %>
+  </div>
+</div>
