--- a/app/views/dealers/index.html.erb
+++ b/app/views/dealers/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Dealers#index</h1>
-<p>Find me in app/views/dealers/index.html.erb</p>
+<h1>Dobavljači</h1>
+
+<table class="rwd-table center">
+	<tr>
+		<th>Ime</th>
+		<th>Adresa</th>
+		<th>Brend</th>
+		<th>Broj telefona</th>
+	</tr>
+	<%= render 'dealers/dealer', obj: @dealers %>
+</table>
