--- a/app/views/models/index.html.erb
+++ b/app/views/models/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Models#index</h1>
-<p>Find me in app/views/models/index.html.erb</p>
+<h1>Modeli</h1>
+
+<table class="rwd-table center">
+	<tr>
+		<th>Ime</th>
+		<th>Šifra modela</th>
+		<th>Dužina</th>
+		<th>Menjač</th>
+		<th>Snaga</th>
+		<th>Broj brzina</th>
+		<th>Cena</th>
+	</tr>
+	<%= render 'models/model', obj: @models %>
+</table>
