Zavrsen projekat :) yay

--- a/app/views/models/index.html.erb
+++ b/app/views/models/index.html.erb
@@ -9,6 +9,7 @@
 		<th>Snaga</th>
 		<th>Broj brzina</th>
 		<th>Cena</th>
+		<th>Valuta</th>
 	</tr>
 	<%= render 'models/model', obj: @models %>
 </table>
