--- a/app/views/models/_model.html.erb
+++ b/app/views/models/_model.html.erb
@@ -6,6 +6,7 @@
 		<td data-th="Menjač"><%= model.menjac %></th>
 		<td data-th="Snaga"><%= model.snaga %></th>
 		<td data-th="Broj brzina"><%= model.broj_brzina %></th>
-		<td data-th="Ceba"><%= model.cena %></th>
+		<td data-th="Cena"><%= model.cena %></th>
+		<td data-th="Valuta"><%= model.valuta %></th>
 	</tr>
 <% end %>
